--- a/GoBarber/package.json
+++ b/GoBarber/package.json
@@ -1,17 +1,23 @@
 {
-    "name": "gobarber",
-    "version": "1.0.0",
-    "main": "index.js",
-    "author": "Gabriel \"CoGUMm\"",
-    "license": "MIT",
-    "scripts": {
-        "dev": "nodemon src/server.js"
-    },
-    "devDependencies": {
-        "nodemon": "^1.19.1",
-        "sucrase": "^3.10.1"
-    },
-    "dependencies": {
-        "express": "^4.17.1"
-    }
+	"name": "gobarber",
+	"version": "1.0.0",
+	"main": "index.js",
+	"author": "Gabriel \"CoGUMm\"",
+	"license": "MIT",
+	"scripts": {
+		"dev": "nodemon src/server.js"
+	},
+	"devDependencies": {
+		"eslint": "^5.16.0",
+		"eslint-config-airbnb-base": "^13.1.0",
+		"eslint-config-prettier": "^5.0.0",
+		"eslint-plugin-import": "^2.18.0",
+		"eslint-plugin-prettier": "^3.1.0",
+		"nodemon": "^1.19.1",
+		"prettier": "^1.18.2",
+		"sucrase": "^3.10.1"
+	},
+	"dependencies": {
+		"express": "^4.17.1"
+	}
 }
