--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ Conceitos/Introdução ao React/node_modules/
 Conceitos/Introdução ao React/.vscode/
 Conceitos/Introdução ao React/yarn.lock
 
+# Modulo 05
+Conceitos/Primeiro projeto com ReactJS/node_modules/
+Conceitos/Primeiro projeto com ReactJS/yarn.lock
+
 # Desafios
 Desafios/desafio01/node_modules/
 Desafios/desafio01/yarn.lock
@@ -18,10 +22,3 @@ Desafios/desafio01/yarn.lock
 # GoBarber
 GoBarber/backend/node_modules/
 GoBarber/backend/yarn.lock
-# Frontend
-GoBarber/frontend/node_modules/
-GoBarber/frontend/yarn.lock
-# testing
-GoBarber/frontend/coverage
-# production
-GoBarber/frontend/build
