--- a/Jornada 2k20/Conceitos/NodeJS/package.json
+++ b/Jornada 2k20/Conceitos/NodeJS/package.json
@@ -10,6 +10,7 @@
         "nodemon": "^2.0.4"
     },
     "dependencies": {
+        "cors": "^2.8.5",
         "express": "^4.17.1",
         "uuidv4": "^6.1.0"
     }
