--- a/Jornada 2k20/GoBarber/GoBarber-api/ormconfig.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/ormconfig.json
@@ -5,6 +5,7 @@
     "username": "postgres",
     "password": "docker",
     "database": "gobarber_api",
+    "entities": ["./src/models/*.ts"],
     "migrations": ["./src/database/migrations/*.ts"],
     "cli": {
         "migrationsDir": "./src/database/migrations"
