:sparkles::wrench: - Tabela User, relacionamento e bcrypt

--- a/Jornada 2k20/GoBarber/GoBarber-api/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.eslintrc.json
@@ -19,6 +19,8 @@
     "plugins": ["@typescript-eslint", "prettier"],
     "rules": {
         "prettier/prettier": "error",
+        "class-methods-use-this": "off",
+        "@typescript-eslint/camelcase": "off",
         "import/extensions": [
             "erros",
             "ignorePackages",
