--- a/Jornada 2k20/GoBarber/GoBarber-api/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/package.json
@@ -13,6 +13,7 @@
         "date-fns": "^2.14.0",
         "express": "^4.17.1",
         "jsonwebtoken": "^8.5.1",
+        "multer": "^1.4.2",
         "pg": "^8.2.1",
         "reflect-metadata": "^0.1.13",
         "typeorm": "^0.2.25",
@@ -22,6 +23,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.6",
         "@types/jsonwebtoken": "^8.5.0",
+        "@types/multer": "^1.4.3",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^14.2.0",
