--- a/Jornada 2k20/Conceitos/projetoreact/package.json
+++ b/Jornada 2k20/Conceitos/projetoreact/package.json
@@ -21,9 +21,6 @@
         "react-scripts": "3.4.1",
         "typescript": "~3.7.2"
     },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -35,5 +32,15 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^3.3.0",
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb": "^18.1.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-import-resolver-typescript": "^2.0.0",
+        "eslint-plugin-prettier": "^3.1.4",
+        "eslint-plugin-react": "^7.19.0",
+        "prettier": "^2.0.5"
     }
 }
