--- a/Jornada 2k20/Conceitos/projetoreact/.eslintrc.json
+++ b/Jornada 2k20/Conceitos/projetoreact/.eslintrc.json
@@ -1,7 +1,7 @@
 {
     "env": {
         "browser": true,
-        "es2020": true
+        "es6": true
     },
     "extends": [
         "plugin:react/recommended",
@@ -10,6 +10,10 @@
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
     ],
+    "globals": {
+        "Atomics": "readonly",
+        "SharedArrayBuffer": "readonly"
+    },
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
         "ecmaFeatures": {
@@ -20,11 +24,22 @@
     },
     "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
     "rules": {
+        "indent": ["error", 4],
         "prettier/prettier": "error",
+        "react/jsx-one-expression-per-line": "off",
         "react-hooks/rules-of-hooks": "error",
+        "react/jsx-indent": ["error", 4],
+        "react/jsx-indent-props": ["error", 4],
         "react-hooks/exhaustive-deps": "warn",
+        // "react/jsx-no-target-blank": ,
         "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
         "import/prefer-default-export": "off",
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            {
+                "allowExpressions": true
+            }
+        ],
         "import/extensions": [
             "error",
             "ignorePackages",
@@ -36,7 +51,7 @@
     },
     "settings": {
         "import/resolver": {
-            "typescripts": {}
+            "typescript": {}
         }
     }
 }
