--- a/Jornada 2k20/Conceitos/projetoreact/package.json
+++ b/Jornada 2k20/Conceitos/projetoreact/package.json
@@ -14,11 +14,16 @@
         "@testing-library/user-event": "^7.1.2",
         "@types/jest": "^24.0.0",
         "@types/node": "^12.0.0",
-        "@types/react": "^16.9.0",
-        "@types/react-dom": "^16.9.0",
+        "@types/react": "^16.9.35",
+        "@types/react-dom": "^16.9.8",
+        "axios": "^0.19.2",
+        "polished": "^3.6.3",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-icons": "^3.10.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
+        "styled-components": "^5.1.0",
         "typescript": "~3.7.2"
     },
     "browserslist": {
@@ -34,13 +39,18 @@
         ]
     },
     "devDependencies": {
-        "@typescript-eslint/eslint-plugin": "^3.3.0",
-        "eslint": "^5.16.0",
+        "@types/react-router-dom": "^5.1.5",
+        "@types/styled-components": "^5.1.0",
+        "@typescript-eslint/eslint-plugin": "^2.34.0",
+        "@typescript-eslint/parser": "^2.34.0",
         "eslint-config-airbnb": "^18.1.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.19.0",
+        "eslint-plugin-import": "2.20.1",
+        "eslint-plugin-jsx-a11y": "6.2.3",
+        "eslint-plugin-prettier": "^3.1.3",
+        "eslint-plugin-react": "7.19.0",
+        "eslint-plugin-react-hooks": "2.5.0",
         "prettier": "^2.0.5"
     }
 }
