:tada: - Iniciando front-end do app / base

--- a/Jornada 2k20/Conceitos/projetoreact/.eslintrc.json
+++ b/Jornada 2k20/Conceitos/projetoreact/.eslintrc.json
@@ -22,17 +22,38 @@
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "plugins": ["react", "react-hooks", "@typescript-eslint", "prettier"],
+    "plugins": [
+        "react",
+        "react-hooks",
+        "@typescript-eslint",
+        "prettier"
+    ],
     "rules": {
-        "indent": ["error", 4],
+        "indent": [
+            "error",
+            4
+        ],
         "prettier/prettier": "error",
         "react/jsx-one-expression-per-line": "off",
         "react-hooks/rules-of-hooks": "error",
-        "react/jsx-indent": ["error", 4],
-        "react/jsx-indent-props": ["error", 4],
+        "react/jsx-indent": [
+            "error",
+            4
+        ],
+        "react/jsx-indent-props": [
+            "error",
+            4
+        ],
         "react-hooks/exhaustive-deps": "warn",
         // "react/jsx-no-target-blank": ,
-        "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
+        "react/jsx-filename-extension": [
+            1,
+            {
+                "extensions": [
+                    ".tsx"
+                ]
+            }
+        ],
         "import/prefer-default-export": "off",
         "@typescript-eslint/explicit-function-return-type": [
             "error",
