--- a/Jornada 2k20/GoBarber/GoBarber-web/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/package.json
@@ -10,9 +10,12 @@
         "@types/node": "^12.0.0",
         "@types/react": "^16.9.0",
         "@types/react-dom": "^16.9.0",
+        "polished": "^3.6.5",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-icons": "^3.10.0",
         "react-scripts": "3.4.1",
+        "styled-components": "^5.1.1",
         "typescript": "~3.7.2"
     },
     "scripts": {
@@ -34,9 +37,10 @@
         ]
     },
     "devDependencies": {
+        "@types/styled-components": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
-        "eslint": "^5.16.0",
+        "eslint": "^6.6.0",
         "eslint-config-airbnb": "^18.2.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
