--- a/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
@@ -1,10 +1,11 @@
 {
     "env": {
         "browser": true,
-        "es2020": true
+        "es6": true
     },
     "extends": [
-        "airbnb-base",
+        "plugin:react/recommended",
+        "airbnb",
         "plugin:@typescript-eslint/recommended",
         "prettier/@typescript-eslint",
         "plugin:prettier/recommended"
@@ -18,88 +19,61 @@
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 11,
+        "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "plugins": [
+        "react",
+        "react-hooks",
         "@typescript-eslint",
-        "prettier",
-        "eslint-plugin-import-helpers"
+        "prettier"
     ],
     "rules": {
-        "no-new": "off",
-        "no-prototype-builtins": "off",
-        "no-restricted-syntax": "off",
-        "max-classes-per-file": "off",
-        "@typescript-eslint/no-explicit-any": "off",
-        "no-console": "off",
-        "import/prefer-default-export": "off",
-        "@typescript-eslint/explicit-function-return-type": [
+        "indent": [
             "off"
         ],
-        "@typescript-eslint/no-unused-vars": [
-            "error",
-            {
-                "argsIgnorePattern": "_"
-            }
-        ],
-        "no-useless-constructor": "off",
-        "@typescript-eslint/naming-convention": [
-            "error",
-            {
-                "selector": "interface",
-                "format": [
-                    "PascalCase"
-                ],
-                "custom": {
-                    "regex": "^I[A-Z]",
-                    "match": true
-                }
-            }
-        ],
-        "@typescript-eslint/explicit-module-boundary-types": [
+        "react/jsx-indent": [
             "warn",
+            4
+        ],
+        "react/jsx-indent-props": [
+            "error",
+            4
+        ],
+        "prettier/prettier": "error",
+        "react/jsx-one-expression-per-line": "off",
+        "react/jsx-props-no-spreading": "off",
+        "react/prop-types": "off",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": "warn",
+        "no-unused-expressions": "off",
+        "react/jsx-filename-extension": [
+            1,
             {
-                "allowArgumentsExplicitlyTypedAsAny": true
+                "extensions": [
+                    ".tsx"
+                ]
             }
         ],
-        "no-underscore-dangle": "off",
-        "@typescript-eslint/camelcase": "off",
-        "prettier/prettier": "error",
-        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off",
+        "@typescript-eslint/explicit-function-return-type": [
+            "error",
+            {
+                "allowExpressions": true
+            }
+        ],
         "import/extensions": [
             "error",
             "ignorePackages",
             {
-                "ts": "never"
-            }
-        ],
-        "import-helpers/order-imports": [
-            "warn",
-            {
-                "newlinesBetween": "always", // new line between groups
-                "groups": [
-                    "module",
-                    "/^@server\/shared/",
-                    "/^@/",
-                    [
-                        "parent",
-                        "sibling",
-                        "index"
-                    ]
-                ],
-                "alphabetize": {
-                    "order": "asc",
-                    "ignoreCase": true
-                }
+                "ts": "never",
+                "tsx": "never"
             }
         ]
     },
     "settings": {
         "import/resolver": {
-            "typescript": {
-                "directory": "packages/server/*/tsconfig.json"
-            }
+            "typescript": {}
         }
     }
 }
