:sparkles: - GoBarber Toast addToast

--- a/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
@@ -29,6 +29,7 @@
         "prettier"
     ],
     "rules": {
+        "no-console": "off",
         "indent": [
             "off"
         ],
@@ -68,6 +69,15 @@
             {
                 "ts": "never",
                 "tsx": "never"
+            }
+        ],
+        "@typescript-eslint/ban-types": [
+            "warn",
+            {
+                "types": {
+                    "object": null,
+                    "Object": null
+                }
             }
         ]
     },
