--- a/Jornada 2k20/GoBarber/GoBarber-api/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/package.json
@@ -18,6 +18,7 @@
         "express-async-errors": "^3.1.1",
         "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.2",
+        "nodemailer": "^6.4.13",
         "pg": "^8.2.1",
         "reflect-metadata": "^0.1.13",
         "tsyringe": "^4.3.0",
@@ -31,6 +32,7 @@
         "@types/jest": "^26.0.8",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/multer": "^1.4.3",
+        "@types/nodemailer": "^6.4.0",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^14.2.0",
