--- a/Jornada 2k20/GoBarber/GoBarber-mobile/android/app/build.gradle
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/android/app/build.gradle
@@ -223,3 +223,10 @@ task copyDownloadableDepsToLibs(type: Copy) {
 }
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
+
+// Font de icones do Vector Icons
+project.ext.vectoricons = [
+    iconFontNames: [ 'Feather.ttf' ]
+]
+
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
