--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -1,6 +1,6 @@
 {
     "name": "gobarbermobile",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "private": true,
     "scripts": {
         "android": "react-native run-android",
@@ -11,27 +11,28 @@
     },
     "dependencies": {
         "@react-native-community/masked-view": "^0.1.10",
-        "@react-navigation/native": "^5.7.0",
-        "@react-navigation/stack": "^5.7.0",
-        "react": "16.11.0",
-        "react-native": "0.62.2",
-        "react-native-gesture-handler": "^1.6.1",
-        "react-native-reanimated": "^1.9.0",
+        "@react-navigation/native": "^5.7.6",
+        "@react-navigation/stack": "^5.9.3",
+        "react": "16.13.1",
+        "react-native": "0.63.3",
+        "react-native-gesture-handler": "^1.8.0",
+        "react-native-reanimated": "^1.13.1",
         "react-native-safe-area-context": "^3.1.1",
         "react-native-screens": "^2.9.0",
         "react-native-vector-icons": "^7.1.0",
-        "styled-components": "^5.1.1"
+        "styled-components": "^5.2.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.2",
-        "@babel/runtime": "^7.6.2",
-        "@react-native-community/eslint-config": "^1.0.0",
-        "@types/jest": "^24.0.24",
-        "@types/react-native": "^0.62.0",
+        "@babel/core": "^7.8.4",
+        "@babel/runtime": "^7.8.4",
+        "@react-native-community/eslint-config": "^1.1.0",
+        "@types/jest": "^25.2.3",
+        "@types/jwt-decode": "^2.2.1",
+        "@types/react-native": "^0.63.2",
+        "@types/react-test-renderer": "^16.9.2",
+        "@types/styled-components": "^5.1.4",
+        "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@types/react-native-vector-icons": "^6.4.6",
-        "@types/react-test-renderer": "16.9.2",
-        "@types/styled-components": "^5.1.1",
-        "@typescript-eslint/eslint-plugin": "^3.5.0",
         "@typescript-eslint/parser": "^3.5.0",
         "babel-jest": "^24.9.0",
         "eslint": "6.8.0",
@@ -45,7 +46,7 @@
         "eslint-plugin-react-hooks": "^2.5.0",
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.58.0",
-        "prettier": "^2.0.5",
+        "prettier": "^2.1.2",
         "react-test-renderer": "16.11.0",
         "typescript": "^3.8.3"
     },
