--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -1,3 +1,13 @@
+# Configurações da aplicação.
 APP_SECRET=
-APP_WEB_URL=http://localhost:3333
-APP_PORT=3333
+
+APP_API_URL=http://localhost:3001
+APP_WEB_URL=http://localhost:3000
+APP_PORT=3001
+
+# Configuração do serviço de e-mail.
+MAIL_DRIVER=ethereal
+
+# Configuração da AWS
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
