--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -5,9 +5,13 @@ APP_API_URL=http://localhost:3001
 APP_WEB_URL=http://localhost:3000
 APP_PORT=3001
 
-# Configuração do serviço de e-mail.
-MAIL_DRIVER=ethereal
-
 # Configuração da AWS
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
+# Configuração do serviço de e-mail.
+MAIL_DRIVER=ethereal
+
+# Armazenamento
+STORAGE_DRIVER=disk
+
