--- a/Jornada 2k20/GoBarber/GoBarber-api/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/package.json
@@ -28,6 +28,8 @@
         "multer": "^1.4.2",
         "nodemailer": "^6.4.13",
         "pg": "^8.2.1",
+        "rate-limiter-flexible": "^2.1.14",
+        "redis": "^3.0.2",
         "reflect-metadata": "^0.1.13",
         "tsyringe": "^4.3.0",
         "typeorm": "^0.2.25",
@@ -43,6 +45,7 @@
         "@types/mongodb": "^3.6.3",
         "@types/multer": "^1.4.3",
         "@types/nodemailer": "^6.4.0",
+        "@types/redis": "^2.8.28",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^14.2.0",
