--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -16,6 +16,7 @@
         "react": "16.13.1",
         "react-native": "0.63.3",
         "react-native-gesture-handler": "^1.8.0",
+        "react-native-iphone-x-helper": "^1.3.1",
         "react-native-reanimated": "^1.13.1",
         "react-native-safe-area-context": "^3.1.1",
         "react-native-screens": "^2.9.0",
@@ -29,10 +30,10 @@
         "@types/jest": "^25.2.3",
         "@types/jwt-decode": "^2.2.1",
         "@types/react-native": "^0.63.2",
+        "@types/react-native-vector-icons": "^6.4.6",
         "@types/react-test-renderer": "^16.9.2",
         "@types/styled-components": "^5.1.4",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
-        "@types/react-native-vector-icons": "^6.4.6",
         "@typescript-eslint/parser": "^3.5.0",
         "babel-jest": "^24.9.0",
         "eslint": "6.8.0",
