:recycle: - GoBarber web - Recuperação de senha

--- a/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
@@ -65,7 +65,7 @@
                 }
             }
         ],
-        "@typescript-eslint/camelcase": "off"
+        "@typescript-eslint/camelcase": "never"
     },
     "settings": {
         "import/resolver": {
