--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -1,21 +1,103 @@
-# Configurações da aplicação.
+##############################################################
+#                 Configurações da aplicação.
+##############################################################
+# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
+##############################################################
+# Secret do JWT.
 APP_SECRET=
 
+# URL's da API e da aplicação web.
 APP_API_URL=http://localhost:3001
 APP_WEB_URL=http://localhost:3000
 APP_PORT=3001
 
-# Configuração da AWS
+# Configuração do serviço de e-mail.
+# Utilizar entre:
+#    - ethereal
+#    - ses
+MAIL_DRIVER=
+
+# Armazenamento dos avatares.
+# Utilizar entre:
+#    - disk
+#    - s3
+STORAGE_DRIVER=
+
+##############################################################
+#                    Configurações AWS.
+##############################################################
+# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
+##############################################################
+# Chave de acesso do usuário no IAM da AWS.
+# MUITO CUIDADO COM ESSAS CHAVES.
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
 
-# Configuração do serviço de e-mail.
-MAIL_DRIVER=ethereal
+##############################################################
+#              Configurações da base de dados.
+##############################################################
+# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
+##############################################################
+#         PostgresSQL, MySQL, MSSQL, Oracle, SQLite
+# Para usar, basta copiar e colar criando um arquivo .env,
+# depois, rode o comando docker-compose up -d postgres para
+# inicializar o banco de dados
+###############################################################
 
-# Armazenamento
-STORAGE_DRIVER=disk
+# O tipo de banco de dados utilizado
+TYPEORM_CONNECTION=
+# O host no qual está hospedado seu banco de dados,
+# se estiver usando o Docker, deixe como localhost mesmo.
+TYPEORM_HOST=
+# A porta para se conectar com o banco de dados
+TYPEORM_PORT=
 
-# Redis
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# O nome do usuário
+TYPEORM_USERNAME=
+# A senha do usuário DB_PG_USER
+TYPEORM_PASSWORD=
+# O nome do database que será criado
+TYPEORM_DATABASE=
+
+# Tome cuidado ao habilitar, isso fará com que o Typeorm
+# destrua e construa as tabelas de acordo com as mudanças
+# que você fizer nas entidades, veja a opção "synchronize" em:
+# https://github.com/typeorm/typeorm/blob/master/docs/connection-options.md#common-connection-options
+TYPEORM_SYNCHRONIZE=false
+
+# Isso diz para o Typeorm se ele deve rodar as migrations ao iniciar a API,
+# marque `false` caso não queira que rode
+TYPEORM_MIGRATIONS_RUN=false
+
+# O timeout que desiste de se conectar com o banco de dados
+TYPEORM_TIMEOUT=60000
+
+# Diz se deve realizar o logging das operações do banco de dados
+TYPEORM_LOGGING=false
+
+# Diz se deve habilitar o SSL para a conexão com o banco de dados
+TYPEORM_SSL=false
+
+# Diretório de entities que o Typeorm deve seguir.
+TYPEORM_PG_ENTITIES="./src/modules/**/infra/typeorm/entities/*.ts"
+
+##############################################################
+# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
+##############################################################
+#                    MongoDB, MariaDB
+##############################################################
+TYPEORM_MONGO_TYPE=
+TYPEORM_MONGO_HOST=
+TYPEORM_MONGO_PORT=
+TYPEORM_MONGO_DATABASE=
+TYPEORM_MONGO_TIMEOUT=10000
+TYPEORM_MONGO_ENTITIES="./src/modules/**/infra/typeorm/schemas/*.ts"
+
+##############################################################
+# /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
+##############################################################
+#                         Redis
+##############################################################
+REDIS_HOST=
+REDIS_PORT=
 REDIS_PASS=
