:recycle: - GoBarber api - Revisado arquivo por aquivo

--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -32,6 +32,7 @@ STORAGE_DRIVER=
 # MUITO CUIDADO COM ESSAS CHAVES.
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=
 
 ##############################################################
 #              Configurações da base de dados.
@@ -40,8 +41,8 @@ AWS_SECRET_ACCESS_KEY=
 ##############################################################
 #         PostgresSQL, MySQL, MSSQL, Oracle, SQLite
 # Para usar, basta copiar e colar criando um arquivo .env,
-# depois, rode o comando docker-compose up -d postgres para
-# inicializar o banco de dados
+# depois, rode o comando docker-compose up -d para inicializar
+# o banco de dados.
 ###############################################################
 
 # O tipo de banco de dados utilizado
