--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -4,7 +4,8 @@
 # /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
 ##############################################################
 # Secret do JWT.
-APP_SECRET=
+JWT_SECRET_KEY=
+JWT_EXPIRES_IN=7d
 
 # URL's da API e da aplicação web.
 APP_API_URL=http://localhost:3001
