--- a/Jornada 2k20/GoBarber/GoBarber-api/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/package.json
@@ -16,34 +16,35 @@
         "celebrate": "^13.0.4",
         "class-transformer": "^0.3.1",
         "cors": "^2.8.5",
-        "date-fns": "^2.14.0",
+        "date-fns": "^2.16.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "handlebars": "^4.7.6",
         "ioredis": "^4.19.4",
         "jsonwebtoken": "^8.5.1",
-        "mime": "^2.4.6",
+        "mime": "^2.4.7",
         "mongodb": "^3.6.3",
         "multer": "^1.4.2",
-        "nodemailer": "^6.4.13",
-        "pg": "^8.2.1",
+        "nodemailer": "^6.4.17",
+        "pg": "^8.5.1",
         "rate-limiter-flexible": "^2.1.14",
         "redis": "^3.0.2",
         "reflect-metadata": "^0.1.13",
-        "tsyringe": "^4.3.0",
-        "typeorm": "^0.2.25",
-        "uuidv4": "^6.1.0"
+        "tsyringe": "^4.4.0",
+        "typeorm": "^0.2.29",
+        "uuidv4": "^6.2.6"
     },
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
-        "@types/ioredis": "^4.17.8",
+        "@types/ioredis": "^4.17.10",
         "@types/jest": "^26.0.8",
         "@types/jsonwebtoken": "^8.5.0",
         "@types/mongodb": "^3.6.3",
         "@types/multer": "^1.4.3",
+        "@types/node": "^14.14.16",
         "@types/nodemailer": "^6.4.0",
         "@types/redis": "^2.8.28",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
