--- a/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/.eslintrc.json
@@ -35,6 +35,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "warn",
         "no-unused-expressions": "off",
+        "import/no-duplicates": "off",
         "react/jsx-filename-extension": [
             1,
             {
