:recycle: - GoBarber api - Arrumado o bug no env do TYPEORM

--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -47,53 +47,53 @@ AWS_DEFAULT_REGION=
 ###############################################################
 
 # O tipo de banco de dados utilizado
-TYPEORM_CONNECTION=
+DB_CONNECTION=
 # O host no qual está hospedado seu banco de dados,
 # se estiver usando o Docker, deixe como localhost mesmo.
-TYPEORM_HOST=
+DB_HOST=
 # A porta para se conectar com o banco de dados
-TYPEORM_PORT=
+DB_PORT=
 
 # O nome do usuário
-TYPEORM_USERNAME=
+DB_USERNAME=
 # A senha do usuário DB_PG_USER
-TYPEORM_PASSWORD=
+DB_PASSWORD=
 # O nome do database que será criado
-TYPEORM_DATABASE=
+DB_DATABASE=
 
 # Tome cuidado ao habilitar, isso fará com que o Typeorm
 # destrua e construa as tabelas de acordo com as mudanças
 # que você fizer nas entidades, veja a opção "synchronize" em:
 # https://github.com/typeorm/typeorm/blob/master/docs/connection-options.md#common-connection-options
-TYPEORM_SYNCHRONIZE=false
+DB_SYNCHRONIZE=
 
 # Isso diz para o Typeorm se ele deve rodar as migrations ao iniciar a API,
 # marque `false` caso não queira que rode
-TYPEORM_MIGRATIONS_RUN=false
+DB_MIGRATIONS_RUN=
 
 # O timeout que desiste de se conectar com o banco de dados
-TYPEORM_TIMEOUT=60000
+DB_TIMEOUT=
 
 # Diz se deve realizar o logging das operações do banco de dados
-TYPEORM_LOGGING=false
+DB_LOGGING=
 
 # Diz se deve habilitar o SSL para a conexão com o banco de dados
-TYPEORM_SSL=false
+DB_SSL=
 
 # Diretório de entities que o Typeorm deve seguir.
-TYPEORM_PG_ENTITIES="./src/modules/**/infra/typeorm/entities/*.ts"
+DB_PG_ENTITIES="./src/modules/**/infra/typeorm/entities/*.ts"
 
 ##############################################################
 # /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
 ##############################################################
 #                    MongoDB, MariaDB
 ##############################################################
-TYPEORM_MONGO_TYPE=
-TYPEORM_MONGO_HOST=
-TYPEORM_MONGO_PORT=
-TYPEORM_MONGO_DATABASE=
-TYPEORM_MONGO_TIMEOUT=10000
-TYPEORM_MONGO_ENTITIES="./src/modules/**/infra/typeorm/schemas/*.ts"
+DB_MONGO_TYPE=
+DB_MONGO_HOST=
+DB_MONGO_PORT=
+DB_MONGO_DATABASE=
+DB_MONGO_TIMEOUT=10000
+DB_MONGO_ENTITIES="./src/modules/**/infra/typeorm/schemas/*.ts"
 
 ##############################################################
 # /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
