--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -35,6 +35,7 @@
         "@types/react-native-vector-icons": "^6.4.6",
         "@types/react-test-renderer": "^16.9.2",
         "@types/styled-components": "^5.1.4",
+        "@types/styled-components-react-native": "^5.1.0",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^3.5.0",
         "babel-jest": "^24.9.0",
