--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -23,7 +23,8 @@
         "react-native-safe-area-context": "^3.1.1",
         "react-native-screens": "^2.9.0",
         "react-native-vector-icons": "^7.1.0",
-        "styled-components": "^5.2.0"
+        "styled-components": "^5.2.0",
+        "yup": "^0.32.8"
     },
     "devDependencies": {
         "@babel/core": "^7.8.4",
@@ -36,6 +37,7 @@
         "@types/react-test-renderer": "^16.9.2",
         "@types/styled-components": "^5.1.4",
         "@types/styled-components-react-native": "^5.1.0",
+        "@types/yup": "^0.29.11",
         "@typescript-eslint/eslint-plugin": "^4.6.0",
         "@typescript-eslint/parser": "^3.5.0",
         "babel-jest": "^24.9.0",
