--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -15,6 +15,7 @@
         "@react-navigation/stack": "^5.9.3",
         "@unform/core": "^2.1.3",
         "@unform/mobile": "^2.1.3",
+        "axios": "^0.21.1",
         "react": "16.13.1",
         "react-native": "0.63.3",
         "react-native-gesture-handler": "^1.8.0",
