:sparkles: - GoBarber mobile - Header do Dashboard

--- a/Jornada 2k20/GoBarber/GoBarber-mobile/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/.eslintrc.json
@@ -32,6 +32,7 @@
       }
     ],
     "camelcase": "off",
+    "react/jsx-one-expression-per-line": "off",
     "react/jsx-indent": ["warn", 2],
     "react/jsx-indent-props": ["error", 2],
     "react/prop-types": "off",
