--- a/Jornada 2k20/GoBarber/GoBarber-mobile/.eslintrc.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/.eslintrc.json
@@ -33,7 +33,8 @@
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
     "import/no-duplicates": "off",
-    "@typescript-eslint/camelcase": "off",
+    "camelcase": "off",
+    "@typescript-eslint/no-unused-vars": ["off"],
     "@typescript-eslint/explicit-function-return-type": [
       "error",
       {
