:recycle::sparkles: - GoBarber mobile - Atualização do avatar

--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -1,75 +1,75 @@
 {
-    "name": "gobarbermobile",
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "android": "react-native run-android",
-        "ios": "react-native run-ios",
-        "start": "react-native start",
-        "test": "jest",
-        "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
-    },
-    "dependencies": {
-        "@react-native-community/async-storage": "^1.12.1",
-        "@react-native-community/datetimepicker": "^3.0.9",
-        "@react-native-community/masked-view": "^0.1.10",
-        "@react-navigation/native": "^5.7.6",
-        "@react-navigation/stack": "^5.9.3",
-        "@unform/core": "^2.1.3",
-        "@unform/mobile": "^2.1.3",
-        "axios": "^0.21.1",
-        "date-fns": "^2.16.1",
-        "react": "16.13.1",
-        "react-native": "0.63.3",
-        "react-native-gesture-handler": "^1.8.0",
-        "react-native-image-picker": "^3.1.4",
-        "react-native-iphone-x-helper": "^1.3.1",
-        "react-native-reanimated": "^1.13.1",
-        "react-native-safe-area-context": "^3.1.1",
-        "react-native-screens": "^2.9.0",
-        "react-native-vector-icons": "^7.1.0",
-        "styled-components": "^5.2.0",
-        "yup": "^0.32.8"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.8.4",
-        "@babel/runtime": "^7.8.4",
-        "@react-native-community/eslint-config": "^1.1.0",
-        "@types/jest": "^25.2.3",
-        "@types/jwt-decode": "^2.2.1",
-        "@types/react-native": "^0.63.2",
-        "@types/react-native-vector-icons": "^6.4.6",
-        "@types/react-test-renderer": "^16.9.2",
-        "@types/styled-components": "^5.1.4",
-        "@types/styled-components-react-native": "^5.1.0",
-        "@types/yup": "^0.29.11",
-        "@typescript-eslint/eslint-plugin": "^4.6.0",
-        "@typescript-eslint/parser": "^3.5.0",
-        "babel-jest": "^24.9.0",
-        "eslint": "6.8.0",
-        "eslint-config-airbnb": "^18.2.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-import-resolver-typescript": "^2.0.0",
-        "eslint-plugin-import": "^2.20.1",
-        "eslint-plugin-jsx-a11y": "^6.2.3",
-        "eslint-plugin-prettier": "^3.1.4",
-        "eslint-plugin-react": "^7.19.0",
-        "eslint-plugin-react-hooks": "^2.5.0",
-        "jest": "^24.9.0",
-        "metro-react-native-babel-preset": "^0.58.0",
-        "prettier": "^2.1.2",
-        "react-test-renderer": "16.11.0",
-        "typescript": "^3.8.3"
-    },
-    "jest": {
-        "preset": "react-native",
-        "moduleFileExtensions": [
-            "ts",
-            "tsx",
-            "js",
-            "jsx",
-            "json",
-            "node"
-        ]
-    }
+  "name": "gobarbermobile",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
+  },
+  "dependencies": {
+    "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/datetimepicker": "^3.0.9",
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/native": "^5.7.6",
+    "@react-navigation/stack": "^5.9.3",
+    "@unform/core": "^2.1.3",
+    "@unform/mobile": "^2.1.3",
+    "axios": "^0.21.1",
+    "date-fns": "^2.16.1",
+    "react": "16.13.1",
+    "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "2.3.4",
+    "react-native-iphone-x-helper": "^1.3.1",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-safe-area-context": "^3.1.1",
+    "react-native-screens": "^2.9.0",
+    "react-native-vector-icons": "^7.1.0",
+    "styled-components": "^5.2.0",
+    "yup": "^0.32.8"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "@types/jest": "^25.2.3",
+    "@types/jwt-decode": "^2.2.1",
+    "@types/react-native": "^0.63.2",
+    "@types/react-native-vector-icons": "^6.4.6",
+    "@types/react-test-renderer": "^16.9.2",
+    "@types/styled-components": "^5.1.4",
+    "@types/styled-components-react-native": "^5.1.0",
+    "@types/yup": "^0.29.11",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "babel-jest": "^24.9.0",
+    "eslint": "6.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.0.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
+    "jest": "^24.9.0",
+    "metro-react-native-babel-preset": "^0.58.0",
+    "prettier": "^2.1.2",
+    "react-test-renderer": "16.11.0",
+    "typescript": "^3.8.3"
+  },
+  "jest": {
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
+  }
 }
