:sparkles: - GoBarber web - Coverage report configurado

--- a/Jornada 2k20/GoBarber/GoBarber-web/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/package.json
@@ -30,7 +30,16 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
+        "test:coverage": "react-scripts test --coverage --watchAll false",
         "eject": "react-scripts eject"
+    },
+    "jest": {
+        "collectCoverageFrom": [
+            "src/pages/**/*.tsx",
+            "src/components/**/*.tsx",
+            "src/hooks/*.tsx",
+            "!src/hooks/index.tsx"
+        ]
     },
     "eslintConfig": {
         "extends": "react-app"
