--- a/Jornada 2k20/GoBarber/GoBarber-web/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-web/package.json
@@ -57,11 +57,13 @@
         ]
     },
     "devDependencies": {
+        "@testing-library/react-hooks": "^3.3.0",
         "@types/react-router-dom": "^5.1.5",
         "@types/styled-components": "^5.1.0",
         "@types/yup": "^0.29.3",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
+        "axios-mock-adapter": "^1.18.1",
         "axios": ">=0.21.1",
         "eslint": "^6.8.0",
         "eslint-config-airbnb": "^18.2.0",
@@ -72,6 +74,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "eslint-plugin-react": "^7.19.0",
         "eslint-plugin-react-hooks": "^2.5.0",
-        "prettier": "^2.0.5"
+        "prettier": "^2.0.5",
+        "react-test-renderer": "^16.13.1"
     }
 }
