--- a/Jornada 2k20/GoBarber/GoBarber-api/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-api/package.json
@@ -4,7 +4,8 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "build": "tsc",
+        "build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
+        "build:test": "node dist/shared/infra/http/server.js",
         "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --ignore-watch node_modules src/shared/infra/http/server.ts",
         "start": "ts-node src/shared/infra/http/server.ts",
         "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
@@ -36,6 +37,13 @@
         "uuidv4": "^6.2.6"
     },
     "devDependencies": {
+        "@babel/cli": "^7.12.13",
+        "@babel/core": "^7.12.13",
+        "@babel/node": "^7.12.13",
+        "@babel/plugin-proposal-class-properties": "^7.12.13",
+        "@babel/plugin-proposal-decorators": "^7.12.13",
+        "@babel/preset-env": "^7.12.13",
+        "@babel/preset-typescript": "^7.12.13",
         "@types/bcryptjs": "^2.4.2",
         "@types/cors": "^2.8.6",
         "@types/express": "^4.17.6",
@@ -48,6 +56,8 @@
         "@types/nodemailer": "^6.4.0",
         "@types/redis": "^2.8.28",
         "@typescript-eslint/eslint-plugin": "^3.2.0",
+        "babel-plugin-module-resolver": "^4.1.0",
+        "babel-plugin-transform-typescript-metadata": "^0.3.1",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^14.2.0",
         "eslint-config-prettier": "^6.11.0",
