--- a/Jornada 2k20/GoBarber/GoBarber-mobile/android/app/build.gradle
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/android/app/build.gradle
@@ -82,6 +82,7 @@ project.ext.react = [
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-code-push/android/codepush.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -150,6 +151,7 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+
         release {
           if (project.hasProperty('MYAPP_UPLOAD_STORE_FILE')) {
             storeFile file(MYAPP_UPLOAD_STORE_FILE)
@@ -162,10 +164,18 @@ android {
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
+            resValue = "string", "CodePushDeploymentKey", '""'
         }
+
+        releaseStaging {
+          matchingFallbacks = [ 'release']
+          resValue = "string", "CodePushDeploymentKey", '"2hDO_DxE6ZjM54sSIyi5nidoT3G3YAF3F20eT"'
+        }
+
         release {
             // Caution! In production, you need to generate your own keystore file.
             // see https://facebook.github.io/react-native/docs/signed-apk-android.
+            resValue = "string", "CodePushDeploymentKey", '"CKR3oQAfIx3OXPbvKxBk6vHqn2JD4ixONMuKo"'
             signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
