--- a/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
+++ b/Jornada 2k20/GoBarber/GoBarber-mobile/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.16.1",
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-code-push": "^7.0.0",
     "react-native-gesture-handler": "^1.8.0",
     "react-native-image-picker": "2.3.4",
     "react-native-iphone-x-helper": "^1.3.1",
