:recycle: - GoBarber api - Refatorado algumas variáveis no env

--- a/Jornada 2k20/GoBarber/GoBarber-api/.env.example
+++ b/Jornada 2k20/GoBarber/GoBarber-api/.env.example
@@ -8,21 +8,21 @@ JWT_SECRET_KEY=
 JWT_EXPIRES_IN=7d
 
 # URL's da API e da aplicação web.
-APP_API_URL=http://localhost:3001
-APP_WEB_URL=http://localhost:3000
-APP_PORT=3001
+APP_API_URL=
+APP_WEB_URL=
+APP_PORT=
 
 # Configuração do serviço de e-mail.
 # Utilizar entre:
 #    - ethereal
 #    - ses
-MAIL_DRIVER=
+MAIL_DRIVER=ethereal
 
 # Armazenamento dos avatares.
 # Utilizar entre:
 #    - disk
 #    - s3
-STORAGE_DRIVER=
+STORAGE_DRIVER=disk
 
 ##############################################################
 #                    Configurações AWS.
@@ -65,14 +65,14 @@ DB_DATABASE=
 # destrua e construa as tabelas de acordo com as mudanças
 # que você fizer nas entidades, veja a opção "synchronize" em:
 # https://github.com/typeorm/typeorm/blob/master/docs/connection-options.md#common-connection-options
-DB_SYNCHRONIZE=
+DB_SYNCHRONIZE=false
 
 # Isso diz para o Typeorm se ele deve rodar as migrations ao iniciar a API,
 # marque `false` caso não queira que rode
-DB_MIGRATIONS_RUN=
+DB_MIGRATIONS_RUN=false
 
 # O timeout que desiste de se conectar com o banco de dados
-DB_TIMEOUT=
+DB_TIMEOUT=60000
 
 # Diz se deve realizar o logging das operações do banco de dados
 DB_LOGGING=
@@ -81,7 +81,13 @@ DB_LOGGING=
 DB_SSL=
 
 # Diretório de entities que o Typeorm deve seguir.
-DB_PG_ENTITIES="./src/modules/**/infra/typeorm/entities/*.ts"
+DB_ENTITIES=
+
+# Indica qual é a extenção das migrations que o Typeorm deve rodar.
+DB_MIGRATIONS=
+
+# Diretório das migrations que o Typeorm deve rodar..
+DB_MIGRATIONSDIR=
 
 ##############################################################
 # /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
@@ -92,8 +98,8 @@ DB_MONGO_TYPE=
 DB_MONGO_HOST=
 DB_MONGO_PORT=
 DB_MONGO_DATABASE=
-DB_MONGO_TIMEOUT=10000
-DB_MONGO_ENTITIES="./src/modules/**/infra/typeorm/schemas/*.ts"
+DB_MONGO_TIMEOUT=
+DB_MONGO_ENTITIES=
 
 ##############################################################
 # /\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\/\
